contacts: Fix pagination for contact queries

Use the right pagination type to avoid an assertion failure.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=786532